Changed cipro '0' to '0 ng/mL'

--- a/Notebooks/2_Ciprofloxacin_damage/Gam_control.ipynb
+++ b/Notebooks/2_Ciprofloxacin_damage/Gam_control.ipynb
@@ -48,8 +48,8 @@
     "                            '230118_DT23', '230720_1', '230720_2', '230726_cipro30', '230824_1', '230829_1', '230201_DT23', '230504_2sec', '230718_2sec',\n",
     "                            '240227_4', '240301_1', '240301_2'\n",
     "                            ],\n",
-    "                    groups=['0, Gam', '0, Gam', '0, Gam',\n",
-    "                            '0, WT', '0, WT', '0, WT', '0, WT', '0, WT',\n",
+    "                    groups=['0 ng/mL, Gam', '0 ng/mL, Gam', '0 ng/mL, Gam',\n",
+    "                            '0 ng/mL, WT', '0 ng/mL, WT', '0 ng/mL, WT', '0 ng/mL, WT', '0 ng/mL, WT',\n",
     "                            '30 ng/mL, WT', '30 ng/mL, WT', '30 ng/mL, WT', '30 ng/mL, WT', '30 ng/mL, WT', '30 ng/mL, WT', '30 ng/mL, WT', '30 ng/mL, WT', '30 ng/mL, WT',\n",
     "                            '30 ng/mL, Gam', '30 ng/mL, Gam', '30 ng/mL, Gam'\n",
     "                            ],\n",
@@ -117,10 +117,10 @@
     "(\n",
     " so.Plot(df, x='Time_min_bin', y='SpineLength', color='Cipro', alpha='Strain')\n",
     " .layout(size=(11, 4))\n",
-    " .facet(col='Group', order=['0, WT', '0, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
+    " .facet(col='Group', order=['0 ng/mL, WT', '0 ng/mL, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
     " .add(so.Bar(), so.Agg(), legend=False)\n",
     " .add(so.Dots(color='k', marker='.', fillalpha=1), so.Jitter(), legend=False)\n",
-    " .scale(color=so.Nominal('flare', order=['0', '', '', '30 ng/mL']), alpha=so.Nominal(order=['WT', 'Gam']), x=so.Continuous().tick(every=15))\n",
+    " .scale(color=so.Nominal('flare', order=['0 ng/mL', '', '', '30 ng/mL']), alpha=so.Nominal(order=['WT', 'Gam']), x=so.Continuous().tick(every=15))\n",
     " .share(y=True)\n",
     " .limit(x=(None, None), y=(None, None))\n",
     " .label(x=\"Time (min)\", y=\"Cell length (µm)\", title='Ciprofloxacin {}'.format, color='Ciprofloxacin', alpha='Strain')\n",
@@ -249,10 +249,10 @@
     "(\n",
     " so.Plot(df, x='Time_min_bin', y='norm_count', color='Cipro', alpha='Strain')\n",
     " .layout(size=(10, 4))\n",
-    " .facet(col='Group', order=['0, WT', '0, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
+    " .facet(col='Group', order=['0 ng/mL, WT', '0 ng/mL, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
     " .add(so.Bar(), so.Agg())\n",
     " .add(so.Dots(color='k', marker='.', fillalpha=1), so.Jitter(), legend=False)\n",
-    " .scale(color=so.Nominal('flare', order=['0', '30 ng/mL']), x=so.Continuous().tick(every=15), alpha=so.Nominal(order=['WT', 'Gam']))\n",
+    " .scale(color=so.Nominal('flare', order=['0 ng/mL', '30 ng/mL']), x=so.Continuous().tick(every=15), alpha=so.Nominal(order=['WT', 'Gam']))\n",
     " .share(y=True)\n",
     " .limit(x=(None, None), y=(None, None))\n",
     " .label(x=\"Time (min)\", y=\"Number of RecB spots per cell area (µm$^{-2}$)\", title='Ciprofloxacin {}'.format, color='Ciprofloxacin')\n",
@@ -418,7 +418,7 @@
     " .facet(col='Cipro')\n",
     " .add(so.Bar(), so.Agg(), legend=False)\n",
     " .add(so.Dots(color='k', marker='.', fillalpha=1), so.Jitter(), legend=False)\n",
-    " .scale(color=so.Nominal('flare', order=['0', 'a', 'b', 'c', '30 ng/mL']),  x=so.Nominal(order=['WT', 'Gam']))\n",
+    " .scale(color=so.Nominal('flare', order=['0 ng/mL', 'a', 'b', 'c', '30 ng/mL']),  x=so.Nominal(order=['WT', 'Gam']))\n",
     " .share(y=True)\n",
     " .limit(x=(None, None), y=(None, None))\n",
     " .label(x='', y=\"Number of RecB spots per cell area (µm$^{-2}$)\", title='Ciprofloxacin {}'.format, color='')\n",
@@ -487,10 +487,10 @@
     "(\n",
     " so.Plot(df, x='Time_min_bin', y='norm_count', color='Cipro', alpha='Strain')\n",
     " .layout(size=(10, 4))\n",
-    " .facet(col='Group', order=['0, WT', '0, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
+    " .facet(col='Group', order=['0 ng/mL, WT', '0 ng/mL, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
     " .add(so.Bar(), so.Agg())\n",
     " .add(so.Dots(color='k', marker='.', fillalpha=1), so.Jitter(), legend=False)\n",
-    " .scale(color=so.Nominal('flare', order=['0', '30 ng/mL']), x=so.Continuous().tick(every=15), alpha=so.Nominal(order=['WT', 'Gam']))\n",
+    " .scale(color=so.Nominal('flare', order=['0 ng/mL', '30 ng/mL']), x=so.Continuous().tick(every=15), alpha=so.Nominal(order=['WT', 'Gam']))\n",
     " .share(y=True)\n",
     " .limit(x=(None, None), y=(None, None))\n",
     " .label(x=\"Time (min)\", y=\"Number of RecB spots per cell area (µm$^{-2}$)\", title='Ciprofloxacin {}'.format, color='Ciprofloxacin')\n",
@@ -535,9 +535,9 @@
     "(\n",
     "    so.Plot(hist, x='Raw_intensity', y='proportion', color='Cipro', alpha='Strain')\n",
     "    .layout(size=(14, 4))\n",
-    "    .facet(col='Group',  order=['0, WT', '0, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
+    "    .facet(col='Group',  order=['0 ng/mL, WT', '0 ng/mL, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
     "    .add(so.Bars(), so.Agg())\n",
-    "    .scale(x=so.Continuous(), color=so.Nominal('flare', order=['0', '30 ng/mL']), alpha=so.Nominal(order=['WT', 'Gam']))\n",
+    "    .scale(x=so.Continuous(), color=so.Nominal('flare', order=['0 ng/mL', '30 ng/mL']), alpha=so.Nominal(order=['WT', 'Gam']))\n",
     "    .limit(x=(0, 10000), y=(None, None))\n",
     "    .label(x=\"RecB spot intensity (AU)\", y=\"Probability\", color='Ciprofloxacin', title='Ciprofloxacin {}'.format)\n",
     ")"
@@ -593,9 +593,9 @@
     "(\n",
     "    so.Plot(hist, x='TrackLength', y='proportion', color='Cipro', alpha='Strain')\n",
     "    .layout(size=(11, 4))\n",
-    "    .facet(col='Group',  order=['0, WT', '0, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
+    "    .facet(col='Group',  order=['0 ng/mL, WT', '0 ng/mL, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
     "    .add(so.Bars(), so.Agg())\n",
-    "    .scale(x=so.Continuous(), color=so.Nominal('flare',  order=['0', '30 ng/mL']), alpha=so.Nominal(order=['WT', 'Gam']))\n",
+    "    .scale(x=so.Continuous(), color=so.Nominal('flare',  order=['0 ng/mL', '30 ng/mL']), alpha=so.Nominal(order=['WT', 'Gam']))\n",
     "    .limit(x=(0, 20), y=(None, None))\n",
     "    .label(x=\"Spot lifetime (frames)\", y=\"Probability\", color='Ciprofloxacin', title='Ciprofloxacin {}'.format)\n",
     ")"
@@ -733,10 +733,10 @@
     "(\n",
     "    so.Plot(monoexp_fit.data, x='TrackLength', color='Cipro', alpha='Strain')\n",
     "    .layout(size=(15, 4))\n",
-    "    .facet(col='Group',  order=['0, WT', '0, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
+    "    .facet(col='Group',  order=['0 ng/mL, WT', '0 ng/mL, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
     "    .add(so.Bars(), so.Agg(), y='proportion')\n",
     "    .add(so.Line(color='k', alpha=1), so.Agg(), y='Fit', legend=False)\n",
-    "    .scale(color=so.Nominal('flare',  order=['0', '30 ng/mL']), alpha=so.Nominal(order=['WT', 'Gam']))\n",
+    "    .scale(color=so.Nominal('flare',  order=['0 ng/mL', '30 ng/mL']), alpha=so.Nominal(order=['WT', 'Gam']))\n",
     "    .limit(x=(0, 20), y=(None, 0.15))\n",
     "    .label(x=\"Spot lifetime (frames)\", y=\"Probability\", color='Ciprofloxacin', title='Ciprofloxacin {}'.format)\n",
     ")"
@@ -784,7 +784,7 @@
     "    .facet(col='Strain',  order=['Gam', 'WT'])\n",
     "    .add(so.Bars(), so.Agg(), y='proportion', legend=False)\n",
     "    .add(so.Line(color='k', alpha=1), so.Agg(), y='Fit', legend=False)\n",
-    "    .scale(color=so.Nominal('flare',  order=['0', '30 ng/mL']))\n",
+    "    .scale(color=so.Nominal('flare',  order=['0 ng/mL', '30 ng/mL']))\n",
     "    .limit(x=(0, 30), y=(None, None))\n",
     "    .label(x=\"Spot lifetime (sec)\", y=\"Probability\", color='Ciprofloxacin')\n",
     "    # .save(loc='/media/daniel/HDD Daniel/DanielThedie/Python/RecB_article_figures/SI_Figures/Monoexp_fits_Gam_cipro30.pdf', format='pdf', bbox_inches='tight')\n",
@@ -886,7 +886,7 @@
     "    .facet(row='Param_name')\n",
     "    .add(so.Dash(), so.Agg())\n",
     "    .add(so.Dots(), so.Jitter(), legend=False)\n",
-    "    .scale(color=so.Nominal('flare',  order=['0, WT', '0, Gam', '30 ng/mL, WT', '30 ng/mL, Gam']), x=so.Nominal('flare',  order=['0, WT', '0, Gam', '30 ng/mL, WT', '30 ng/mL, Gam']))\n",
+    "    .scale(color=so.Nominal('flare',  order=['0 ng/mL, WT', '0 ng/mL, Gam', '30 ng/mL, WT', '30 ng/mL, Gam']), x=so.Nominal('flare',  order=['0 ng/mL, WT', '0 ng/mL, Gam', '30 ng/mL, WT', '30 ng/mL, Gam']))\n",
     "    .share(y=False)\n",
     "    .limit(y=(None, None))\n",
     "    .label(x=\"\", y=\"\", color='')\n",
@@ -1151,8 +1151,6 @@
     "\n",
     "(\n",
     "    so.Plot(df, x='TrackLength_s', color='Cipro', alpha='Strain')\n",
-    "    # .layout(size=(12,4))\n",
-    "    # .facet(col='Group', order=['0, WT', '0, Gam', '30 ng/mL, WT', '30 ng/mL, Gam'])\n",
     "    .facet(col='Strain', row='Cipro', order={'col':['WT', 'Gam']})\n",
     "    .add(so.Bars(), so.Agg(), y='proportion', legend=False)\n",
     "    .add(so.Line(color='k', alpha=1), so.Agg(), y='Fit', label='Fit')\n",
@@ -1266,7 +1264,7 @@
     "    .add(so.Line(linestyle='--', color='darkgreen', alpha=0.7), so.Agg(), y='Fit_fast', legend=False)\n",
     "    .add(so.Line(linestyle='--', color='blue', alpha=0.7), so.Agg(), y='Fit_slow', legend=False)\n",
     "    .limit(x=(0, 30), y=(None, None))\n",
-    "    .scale(color=so.Nominal('flare',  order=['0', '30 ng/mL']))\n",
+    "    .scale(color=so.Nominal('flare',  order=['0 ng/mL', '30 ng/mL']))\n",
     "    .label(x=\"Spot lifetime (sec)\", y=\"Probability\", color='Ciprofloxacin')\n",
     "    # .save(loc='/media/daniel/HDD Daniel/DanielThedie/Figures/RecB_article_figures/2_Cipro_RecB/Gam_cipro30_fits.svg', format='svg', bbox_inches='tight')\n",
     ")"
@@ -1408,7 +1406,7 @@
     "    .facet(col='Param_name', wrap=2)\n",
     "    .add(so.Dash(), so.Agg())\n",
     "    .add(so.Dots(), so.Jitter(), legend=False)\n",
-    "    .scale(color=so.Nominal('flare',  order=['0, WT', '0, Gam', '30 ng/mL, WT', '30 ng/mL, Gam']), x=so.Nominal('flare',  order=['0, WT', '0, Gam', '30 ng/mL, WT', '30 ng/mL, Gam']))\n",
+    "    .scale(color=so.Nominal('flare',  order=['0 ng/mL, WT', '0 ng/mL, Gam', '30 ng/mL, WT', '30 ng/mL, Gam']), x=so.Nominal('flare',  order=['0 ng/mL, WT', '0 ng/mL, Gam', '30 ng/mL, WT', '30 ng/mL, Gam']))\n",
     "    .share(y=False)\n",
     "    .limit(y=(None, None))\n",
     "    .label(x=\"\", y=\"\", color='')\n",
@@ -1532,7 +1530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
