--- a/Notebooks/2_Ciprofloxacin_damage/Long_RecB_spots.ipynb
+++ b/Notebooks/2_Ciprofloxacin_damage/Long_RecB_spots.ipynb
@@ -68,7 +68,7 @@
     "                            '230907_1', '230907_2', '230913_1', '240717_4',\n",
     "                            '230118_DT23', '230720_1', '230720_2', '230726_cipro30', '230824_1', '230829_1', '230201_DT23', '230504_2sec', '230718_2sec', '240424_2', '240612_2', '240620_2'\n",
     "                            ],\n",
-    "                    groups=['0', '0', '0', '0', '0', '0', '0', '0',\n",
+    "                    groups=['0 ng/mL', '0 ng/mL', '0 ng/mL', '0 ng/mL', '0 ng/mL', '0 ng/mL', '0 ng/mL', '0 ng/mL',\n",
     "                            '3 ng/mL', '3 ng/mL', '3 ng/mL', '3 ng/mL',\n",
     "                            '10 ng/mL', '10 ng/mL', '10 ng/mL', '10 ng/mL', '10 ng/mL', '10 ng/mL',\n",
     "                            '20 ng/mL', '20 ng/mL', '20 ng/mL', '20 ng/mL',\n",
@@ -265,7 +265,7 @@
     "df = (monoexp_fit\n",
     "      .data\n",
     "      .assign(TrackLength_s=lambda df: df.TrackLength * 2)\n",
-    "      .query('Group != \"0\"')\n",
+    "      .query('Group != \"0 ng/mL\"')\n",
     "      )\n",
     "\n",
     "(\n",
@@ -490,7 +490,7 @@
     "df = (lifetime_fit\n",
     "      .data\n",
     "      .assign(TrackLength_s=lambda df: df.TrackLength * 2)\n",
-    "      .query('Group != \"0\"')\n",
+    "      .query('Group != \"0 ng/mL\"')\n",
     "      )\n",
     "\n",
     "(\n",
@@ -853,7 +853,7 @@
     "display(df\n",
     "        .assign(Group=lambda df: df.Group\n",
     "                                   .astype('category')\n",
-    "                                   .cat.set_categories(['0', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'], ordered=True))\n",
+    "                                   .cat.set_categories(['0 ng/mL', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'], ordered=True))\n",
     "        .sort_values('Group')\n",
     "        .groupby('Group', observed=True)\n",
     "        .agg({'DSB_rate':['median', 'std']})\n",
@@ -865,14 +865,14 @@
     "    .layout(size=(8,5))\n",
     "    .add(so.Bar(), so.Agg('median'), legend=False)\n",
     "    .add(so.Dots(color='k', fillalpha=1, marker='.'), so.Jitter(), legend=False)\n",
-    "    .scale(color=so.Nominal('flare', order=['0', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL']),\n",
-    "           x=so.Nominal(order=['0', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'])\n",
+    "    .scale(color=so.Nominal('flare', order=['0 ng/mL', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL']),\n",
+    "           x=so.Nominal(order=['0 ng/mL', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'])\n",
     "           )\n",
     "    .share(y=False)\n",
     "    .limit(y=(0, None))\n",
     "    .label(x=\"\", y=\"RecB recruitment rate (h$^{-1}$)\", color='Ciprofloxacin')\n",
     "    .theme(plotting_context('talk'))\n",
-    "    .save(loc='/media/daniel/HDD Daniel/DanielThedie/Figures/RecB_article_figures/2_Cipro_RecB/DSB_rate.svg', format='svg', bbox_inches='tight')\n",
+    "#     .save(loc='/media/daniel/HDD Daniel/DanielThedie/Figures/RecB_article_figures/2_Cipro_RecB/DSB_rate.svg', format='svg', bbox_inches='tight')\n",
     ")"
    ]
   },
@@ -1216,7 +1216,7 @@
     "df = (fit_timepoints\n",
     "      .data\n",
     "      .assign(TrackLength_s=lambda df: df.TrackLength * 2)\n",
-    "      .query('Group == \"0\"')\n",
+    "      .query('Group == \"0 ng/mL\"')\n",
     "      )\n",
     "\n",
     "(\n",
@@ -1264,7 +1264,7 @@
     "                        .drop(columns='variable')\n",
     "                        .assign(Group=lambda df: df.Group\n",
     "                                                        .astype('category')\n",
-    "                                                        .cat.set_categories(['0', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'], ordered=True))\n",
+    "                                                        .cat.set_categories(['0 ng/mL', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'], ordered=True))\n",
     "                        .sort_values('Group')\n",
     "                        )"
    ]
@@ -1386,9 +1386,9 @@
     "(\n",
     "    so.Plot(df, x='Time_min_bin', y='DSB_rate', color='Group')\n",
     "    .layout(size=(14,4))\n",
-    "    .facet(col='Group', order=['0', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'])\n",
+    "    .facet(col='Group', order=['0 ng/mL', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'])\n",
     "    .add(so.Bar(), so.Agg(), legend=False)\n",
-    "    .scale(color=so.Nominal('flare', order=['0', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL']))\n",
+    "    .scale(color=so.Nominal('flare', order=['0 ng/mL', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL']))\n",
     "    .limit(y=(0, None))\n",
     "    .label(x=\"Time (min)\", y=\"RecB recruitment rate (h$^{-1}$)\", color='Ciprofloxacin')\n",
     "    # .theme(plotting_context('talk'))\n",
