--- a/Notebooks/2_Ciprofloxacin_damage/Sytox_cipro_data.ipynb
+++ b/Notebooks/2_Ciprofloxacin_damage/Sytox_cipro_data.ipynb
@@ -46,7 +46,7 @@
     "                            '240717_4',\n",
     "                            '240424_2', '240612_2', '240620_2'\n",
     "                            ],\n",
-    "                    groups=['0', '0', '0',\n",
+    "                    groups=['0 ng/mL', '0 ng/mL', '0 ng/mL',\n",
     "                            '3 ng/mL',\n",
     "                            '10 ng/mL', '10 ng/mL', '10 ng/mL',\n",
     "                            '20 ng/mL',\n",
@@ -703,7 +703,7 @@
     "\n",
     "(\n",
     "    so.Plot(hist, x='Density')\n",
-    "    .facet(col='Group', order=['0', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'])\n",
+    "    .facet(col='Group', order=['0 ng/mL', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'])\n",
     "    .layout(size=(15,4))\n",
     "    .add(so.Bars(color='magenta', alpha=.4), so.Agg(),  y='RecB')\n",
     "    .add(so.Area(color='green'), so.Agg(), y='Nucleoid')\n",
@@ -772,7 +772,7 @@
     "\n",
     "(\n",
     "    so.Plot(hist, x='Density')\n",
-    "    .facet(row='Time_min_bin', col='Group', order={'col':['0', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL']})\n",
+    "    .facet(row='Time_min_bin', col='Group', order={'col':['0 ng/mL', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL']})\n",
     "    .layout(size=(14,10))\n",
     "    .add(so.Bars(color='magenta', alpha=.4), so.Agg(),  y='RecB')\n",
     "    .add(so.Area(color='green'), so.Agg(), y='Nucleoid')\n",
@@ -841,7 +841,7 @@
     "\n",
     "(\n",
     "    so.Plot(hist, x='Density')\n",
-    "    .facet(col='Group', order=['0', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'])\n",
+    "    .facet(col='Group', order=['0 ng/mL', '3 ng/mL', '10 ng/mL', '20 ng/mL', '30 ng/mL'])\n",
     "    .layout(size=(16,4))\n",
     "    .add(so.Bars(color='magenta', alpha=.4), so.Agg(),  y='RecB')\n",
     "    .add(so.Area(color='green'), so.Agg(), y='Nucleoid')\n",
@@ -894,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
