--- a/Notebooks/3_Mutants/RecB_re-recruitment.ipynb
+++ b/Notebooks/3_Mutants/RecB_re-recruitment.ipynb
@@ -70,9 +70,9 @@
     "                            '230118_DT23', '230720_1', '230720_2', '230726_cipro30', '230824_1', '230829_1', '230201_DT23', '230504_2sec', '230718_2sec', '240424_2', '240612_2',\n",
     "                            '221222_cipro30ngmL', '230802_DT22', '230808_DT22', '230914_1', '240424_4', '240612_4',\n",
     "                            '230802_DT21', '230913_2', '230914_2', '240606_2', '240606_4'],\n",
-    "                    groups=['WT, 0', 'WT, 0', 'WT, 0', 'WT, 0', 'WT, 0', 'WT, 0', 'WT, 0',\n",
-    "                            'ΔrecA, 0', 'ΔrecA, 0', 'ΔrecA, 0', 'ΔrecA, 0',\n",
-    "                            'RecB1080, 0', 'RecB1080, 0', 'RecB1080, 0', 'RecB1080, 0', 'RecB1080, 0',\n",
+    "                    groups=['WT, 0 ng/mL', 'WT, 0 ng/mL', 'WT, 0 ng/mL', 'WT, 0 ng/mL', 'WT, 0 ng/mL', 'WT, 0 ng/mL', 'WT, 0 ng/mL',\n",
+    "                            'ΔrecA, 0 ng/mL', 'ΔrecA, 0 ng/mL', 'ΔrecA, 0 ng/mL', 'ΔrecA, 0 ng/mL',\n",
+    "                            'RecB1080, 0 ng/mL', 'RecB1080, 0 ng/mL', 'RecB1080, 0 ng/mL', 'RecB1080, 0 ng/mL', 'RecB1080, 0 ng/mL',\n",
     "                            'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL',\n",
     "                            'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL',\n",
     "                            'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL'],\n",
@@ -159,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
