Italicised recA and subscripted 1080

--- a/Notebooks/3_Mutants/RecB_re-recruitment.ipynb
+++ b/Notebooks/3_Mutants/RecB_re-recruitment.ipynb
@@ -71,11 +71,11 @@
     "                            '221222_cipro30ngmL', '230802_DT22', '230808_DT22', '230914_1', '240424_4', '240612_4',\n",
     "                            '230802_DT21', '230913_2', '230914_2', '240606_2', '240606_4'],\n",
     "                    groups=['WT, 0 ng/mL', 'WT, 0 ng/mL', 'WT, 0 ng/mL', 'WT, 0 ng/mL', 'WT, 0 ng/mL', 'WT, 0 ng/mL', 'WT, 0 ng/mL',\n",
-    "                            'ΔrecA, 0 ng/mL', 'ΔrecA, 0 ng/mL', 'ΔrecA, 0 ng/mL', 'ΔrecA, 0 ng/mL',\n",
-    "                            'RecB1080, 0 ng/mL', 'RecB1080, 0 ng/mL', 'RecB1080, 0 ng/mL', 'RecB1080, 0 ng/mL', 'RecB1080, 0 ng/mL',\n",
+    "                            '$recA$, 0 ng/mL', '$recA$, 0 ng/mL', '$recA$, 0 ng/mL', '$recA$, 0 ng/mL',\n",
+    "                            'RecB$_{1080}$, 0 ng/mL', 'RecB$_{1080}$, 0 ng/mL', 'RecB$_{1080}$, 0 ng/mL', 'RecB$_{1080}$, 0 ng/mL', 'RecB$_{1080}$, 0 ng/mL',\n",
     "                            'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL',\n",
-    "                            'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL',\n",
-    "                            'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL'],\n",
+    "                            '$recA$, 30 ng/mL', '$recA$, 30 ng/mL', '$recA$, 30 ng/mL', '$recA$, 30 ng/mL', '$recA$, 30 ng/mL', '$recA$, 30 ng/mL',\n",
+    "                            'RecB$_{1080}$, 30 ng/mL', 'RecB$_{1080}$, 30 ng/mL', 'RecB$_{1080}$, 30 ng/mL', 'RecB$_{1080}$, 30 ng/mL', 'RecB$_{1080}$, 30 ng/mL'],\n",
     "                    filters={'all':'Frame < 50'},\n",
     "                    metadata='DateTime',\n",
     "                    rename_objects={'Spot_detection':'RecB_spots'},\n",
@@ -133,10 +133,10 @@
     "\n",
     "(\n",
     "      so.Plot(df, x='interval', color='Strain')\n",
-    "      .facet(col='Cipro', row='Strain', order={'row':['WT', 'ΔrecA', 'RecB1080']})\n",
+    "      .facet(col='Cipro', row='Strain', order={'row':['WT', '$recA$', 'RecB$_{1080}$']})\n",
     "      .layout(size=(10, 6))\n",
     "      .add(so.Bars(), so.Hist(binwidth=4, common_norm=False, stat='probability'), legend=False)\n",
-    "      .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick'], order=['WT', 'ΔrecA', 'RecB1080']))\n",
+    "      .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick'], order=['WT', '$recA$', 'RecB$_{1080}$']))\n",
     "      .label(x='Time for RecB\\nre-recruitment (sec)', y='Probability')\n",
     "      # .limit(y=(0, 0.05))\n",
     ")"
