--- a/Notebooks/3_Mutants/Sytox_data.ipynb
+++ b/Notebooks/3_Mutants/Sytox_data.ipynb
@@ -57,10 +57,10 @@
     "                            ],\n",
     "                    groups=['WT, 0 ng/mL', 'WT, 0 ng/mL', 'WT, 0 ng/mL',\n",
     "                            'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL',\n",
-    "                            'ΔrecA, 0 ng/mL', 'ΔrecA, 0 ng/mL', 'ΔrecA, 0 ng/mL',\n",
-    "                            'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL',\n",
-    "                            'RecB1080, 0 ng/mL', 'RecB1080, 0 ng/mL', 'RecB1080, 0 ng/mL',\n",
-    "                            'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL'\n",
+    "                            '$recA$, 0 ng/mL', '$recA$, 0 ng/mL', '$recA$, 0 ng/mL',\n",
+    "                            '$recA$, 30 ng/mL', '$recA$, 30 ng/mL', '$recA$, 30 ng/mL',\n",
+    "                            'RecB$_{1080}$, 0 ng/mL', 'RecB$_{1080}$, 0 ng/mL', 'RecB$_{1080}$, 0 ng/mL',\n",
+    "                            'RecB$_{1080}$, 30 ng/mL', 'RecB$_{1080}$, 30 ng/mL', 'RecB$_{1080}$, 30 ng/mL'\n",
     "                            ],\n",
     "                    metadata='DateTime'\n",
     "                    )\n",
@@ -657,7 +657,7 @@
     "\n",
     "(\n",
     "    so.Plot(hist, x='Density')\n",
-    "    .facet(row='Cipro', col='Strain', order={'row':['0 ng/mL', '30 ng/mL'], 'col':['WT', 'ΔrecA', 'RecB1080']})\n",
+    "    .facet(row='Cipro', col='Strain', order={'row':['0 ng/mL', '30 ng/mL'], 'col':['WT', '$recA$', 'RecB$_{1080}$']})\n",
     "    .layout(size=(12,4))\n",
     "    .add(so.Bars(color='magenta', alpha=.4), so.Agg(),  y='RecB')\n",
     "    .add(so.Area(color='green'), so.Agg(), y='Nucleoid')\n",
@@ -726,7 +726,7 @@
     "\n",
     "(\n",
     "    so.Plot(hist, x='Density')\n",
-    "    .facet(row='Time_min_bin', col='Group', order={'col':['WT, 0 ng/mL', 'WT, 30 ng/mL', 'ΔrecA, 0 ng/mL', 'ΔrecA, 30 ng/mL', 'RecB1080, 0 ng/mL', 'RecB1080, 30 ng/mL']})\n",
+    "    .facet(row='Time_min_bin', col='Group', order={'col':['WT, 0 ng/mL', 'WT, 30 ng/mL', '$recA$, 0 ng/mL', '$recA$, 30 ng/mL', 'RecB$_{1080}$, 0 ng/mL', 'RecB$_{1080}$, 30 ng/mL']})\n",
     "    .layout(size=(14,10))\n",
     "    .add(so.Bars(color='magenta', alpha=.4), so.Agg(),  y='RecB')\n",
     "    .add(so.Area(color='green'), so.Agg(), y='Nucleoid')\n",
